# Secasy

./: .gitignore  AVALANCHE_RESULTS.md  BlockOne.c  BlockOne.h  BlockOne.h.gch  BlockTwo.c  CMakeLists.txt  Calculation.h  CalculationPhase.c  Calculations.c  Calculations.h  Defines.h  InitializationPhase.c  InitializationPhase.h  Printing.c  Printing.h  ProcessingPhase.c  ProcessingPhase.h  README.md  SECURITY_ANALYSIS.md  SECURITY_ANALYSIS_PLAN.md  STATUS.md  SieveOfEratosthenes.c  SieveOfEratosthenes.h  avalanche.c  collision_finder.c  fileToHash  input  main.c  primes.h  secasy_linux_binary  targeted_attack.c  todo.txt  util.c  util.h
scripts/: README.md  SECURITY_ANALYSIS.md  avalanche.c  collision_finder.c  generate_hashes.sh  run_extended_avalanche_wsl.sh  run_security_tests.sh  scan_reduced_params.py  targeted_attack.c  validate_collisions.py  validate_sac.py
tests/analysis/: analyze_2byte.c  analyze_collision.c  benchmark_speed.c  collision_attack.c  collision_test_fixed.c  compare_fields.c  compare_hashes.py  comprehensive_security_test.c  debug_directions.c  exact_trace.c  find_all_collisions.c  full_field_compare.c  hash_analysis.py  practical_exploit_test.c  show_fields.c  simple_functional_test.c  statistical_randomness_test.c  temp_dir.c  test_1byte.c  test_2_3_byte.c  test_deep_security.c  test_position_mixing.c  test_rounds_needed.c  trace_movements.c
tests/avalanche/: avalanche.c
tests/avalanche/docs/: AVALANCHE_RESULTS.md
tests/avalanche/scripts/: run_extended_avalanche_wsl.sh
tests/collision/: collision.c
tests/differential/: differential_test.c
tests/extended_security/: extended_security_test.c
tests/poc/: trunc_collision_poc.c
tests/preimage/: preimage.c
tests/sac_exploit/: sac_exploit.c
tests/statistical/: statistical_test.c
